# Python-learning

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
etc/: rsyslog.conf  shoppon.conf
shoppon/: migrate.py
shoppon/algorithm/sort/: quick_sort.py
shoppon/cmd/: api.py
shoppon/concurrency/: concurrent_exec.py  event.py  monkey_patch.py  producer  producer_consumer.py
shoppon/config/: __init__.py
shoppon/db/mongo/: api.py
shoppon/db/sqlalchemy/: models.py
shoppon/db/sqlalchemy/versions/: 001_init.py
shoppon/debug/: gdb.py
shoppon/decorate/: base.py
shoppon/logs/: my_syslog.py
shoppon/memory/: profiler.py
shoppon/process/: defunct.py
shoppon/spiders/planning/: main.py  pipline.py  settings.py
shoppon/tests/concurrency/: test_monkey_patch.py
shoppon/tools/: auto_config_dns.py  autocomplete.py  public_ip.ipynb  switch_dns.sh
shoppon/topics/: context_manager.py
tests/algorithm/sort/: test_quick_sort.py
tests/concurrency/: test_monkey_patch.py
tests/topics/: test_context_manager.py
