[metadata]
name = shoppon
summary = Demo code
description-file =
    README.md
author = Shoppon
author-email = shopppon@gmail.com
home-page = https://github.com/shoppon/shoppon/

[files]
packages =
    shoppon
data_files =
    etc/rsyslog.conf = /etc/rsyslog.d/rsyslog-shoppon.conf

[options]
include_package_data = True

[options.entry_points]
console_scripts =
    shoppon-api = shoppon.cmd.api:main
